@@ -1,5 +1,8 @@
 sensord (0.7.0) unstable; urgency=low
 
+  [Lihan Guo]
+  * Fixed coverity defects
+
   [Antti Virtanen]
   * Removed possibility of having multiple sensors inside single DeviceAdaptor. This feature was never used.
   * DeviceAdaptor::init() added. Subclasses can implement this to initialize themselves.
